# drosmokers-api

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml
migrations/2022-04-14-144738_create_strains/: up.sql
migrations/2022-04-18-125929_create_batches/: down.sql  up.sql
migrations/2022-04-23-131612_create_terpenes/: down.sql  up.sql
src/: db.rs  handlers.rs  main.rs  models.rs  schema.rs
