[package]
name = "drosmokers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
chrono = { version = "0.4.9", features = ["serde"] }
diesel = { version = "1.4.2", features = ["postgres", "r2d2", "chrono"] }
diesel-derive-enum = { version = "0.4.1", features = ["postgres"] }
dotenv = "0.15.0"
r2d2 = "*"
serde = "1.0.130"
serde_json = "1"
